# portal32playermod_plugin

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  client.cpp  client.hpp  command.cpp  command.hpp  console.cpp  console.hpp  dumphex.cpp  dumphex.hpp  engine.cpp  engine.hpp  gui.cpp  gui.hpp  imgui_draw.cpp  imgui_widgets.cpp  interface.cpp  interface.hpp  main.cpp  main.hpp  meme.txt  memory.cpp  memory.hpp  offsets.cpp  offsets.hpp  portal2.cpp  portal2.hpp  sdk.cpp  sdk.hpp  sdl_hook.hpp  server.cpp  server.hpp  tier1.cpp  tier1.hpp  utils.hpp  vscript.cpp  vscript.hpp
.github/workflows/: CI.yml
